@@ -1048,6 +1048,13 @@ name|isKeep
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|confs
+operator|=
+name|report
+operator|.
+name|getConfigurations
+argument_list|()
+expr_stmt|;
 if|if
 condition|(
 name|isKeep
@@ -1207,19 +1214,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|conf
-operator|.
-name|trim
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|"*"
-argument_list|)
-condition|)
-block|{
 name|getProject
 argument_list|()
 operator|.
@@ -1229,10 +1223,7 @@ literal|"ivy.resolved.configurations"
 argument_list|,
 name|mergeConfs
 argument_list|(
-name|md
-operator|.
-name|getConfigurationsNames
-argument_list|()
+name|confs
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1244,36 +1235,10 @@ literal|"ivy.resolved.configurations"
 argument_list|,
 name|mergeConfs
 argument_list|(
-name|md
-operator|.
-name|getConfigurationsNames
-argument_list|()
+name|confs
 argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|getProject
-argument_list|()
-operator|.
-name|setProperty
-argument_list|(
-literal|"ivy.resolved.configurations"
-argument_list|,
-name|conf
-argument_list|)
-expr_stmt|;
-name|settings
-operator|.
-name|setVariable
-argument_list|(
-literal|"ivy.resolved.configurations"
-argument_list|,
-name|conf
-argument_list|)
-expr_stmt|;
-block|}
 if|if
 condition|(
 name|file
@@ -1456,19 +1421,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|conf
-operator|.
-name|trim
-argument_list|()
-operator|.
-name|equals
-argument_list|(
-literal|"*"
-argument_list|)
-condition|)
-block|{
 name|getProject
 argument_list|()
 operator|.
@@ -1480,10 +1432,7 @@ name|resolveId
 argument_list|,
 name|mergeConfs
 argument_list|(
-name|md
-operator|.
-name|getConfigurationsNames
-argument_list|()
+name|confs
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1497,40 +1446,10 @@ name|resolveId
 argument_list|,
 name|mergeConfs
 argument_list|(
-name|md
-operator|.
-name|getConfigurationsNames
-argument_list|()
+name|confs
 argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|getProject
-argument_list|()
-operator|.
-name|setProperty
-argument_list|(
-literal|"ivy.resolved.configurations."
-operator|+
-name|resolveId
-argument_list|,
-name|conf
-argument_list|)
-expr_stmt|;
-name|settings
-operator|.
-name|setVariable
-argument_list|(
-literal|"ivy.resolved.configurations."
-operator|+
-name|resolveId
-argument_list|,
-name|conf
-argument_list|)
-expr_stmt|;
-block|}
 if|if
 condition|(
 name|file
