@@ -2448,6 +2448,33 @@ name|exists
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// test the properties
+name|Project
+name|project
+init|=
+name|resolve
+operator|.
+name|getProject
+argument_list|()
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|project
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.resolved.configurations"
+argument_list|)
+operator|.
+name|indexOf
+argument_list|(
+literal|"default"
+argument_list|)
+operator|>
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
 block|}
 specifier|public
 name|void
